# kanama

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  gradle.properties  mkdocs.yml  settings.gradle.kts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
android/godot-plugin/plugin/src/main/cpp/: CMakeLists.txt
annotations/: build.gradle.kts
bootstrap/: CMakeLists.txt  bootstrap.c
docs/: index.md  requirements.txt
example_project/: .gitignore  Body2dVirtualReturnProbe.kt  Body2dVirtualReturnProbe.kt.uid  DefaultProbeScript.kt  DefaultProbeScript.kt.uid  GraphEditVirtualReturnProbe.kt  GraphEditVirtualReturnProbe.kt.uid  HelloKanama.kt  HelloKanama.kt.uid  HelloScript.kt  HelloScript.kt.uid  InstancedMesh.tscn  KanamaSmokeAutoload.gd  KanamaSmokeAutoload.gd.uid  MeshVirtualReturnProbe.kt  MeshVirtualReturnProbe.kt.uid  NonToolHelloKanama.kt  NonToolHelloKanama.kt.uid  NonToolScript.kt  NonToolScript.kt.uid  ProbeGlobalRes.gd  ProbeGlobalRes.gd.uid  ProcessDisableSmoke.kt  ProcessDisableSmoke.kt.uid  ReentrantForgeProbe.kt  ReentrantForgeProbe.kt.uid  ReentrantPlaceholderProbe.kt  ReentrantPlaceholderProbe.kt.uid  RenderSceneDataVirtualReturnProbe.kt  RenderSceneDataVirtualReturnProbe.kt.uid  ResourceForgeSmoke.kt  ResourceForgeSmoke.kt.uid  ResourceOwnerSmoke.kt  ResourceOwnerSmoke.kt.uid  SelfSmoke.kt  SelfSmoke.kt.uid  SmokeResource.kt  SmokeResource.kt.uid  SnowWrapperProbe.kt  SnowWrapperProbe.kt.uid  (+17 more)
ios-runtime/: build.gradle.kts
kanama-common-api/: build.gradle.kts
processor/: build.gradle.kts
project-scripts/: build.gradle.kts
scripts/: android_export_minified.sh  android_smoke.sh  api_wrapper_candidates.py  api_wrapper_coverage.py  api_wrapper_generator_report.py  audit_api_wrapper_inheritance.py  audit_builtin_storage_sizes.py  audit_embedded_processes.sh  audit_generator_object_policy.py  audit_generator_shape_policy.py  audit_godot_object_script_paths.py  audit_ptrcall_helper_layouts.py  audit_replicated_script_properties.py  audit_runtime_node_lookups.py  audit_scalar_float_abi.py  audit_value_type_wrappers.py  audit_vararg_ptrcalls.py  audit_variant_marshalling_policy.py  audit_wrapper_abi_policy.py  audit_wrapper_signatures.py  check_godot_version_pin.py  check_ios_no_silent_stubs.py  check_property_coverage.py  check_wrapper_generator.py  fresh_clone_smoke.sh  generate_api_shell_wrappers.py  generate_api_wrapper.py  hot_reload_smoke.sh  (+25 more)
(+2301 files in other folders)
